--- a/public/templates/sign-up.html
+++ b/public/templates/sign-up.html
@@ -20,7 +20,8 @@
             <li><a href="survey.html">Projects</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="login.html">Sign In</a></li>
+            
+            <li><a ui-sref="home.login">Sign In</a></li>
             <li><a href="login.html">Sign Out</a></li>
           </ul>
         </div>
