added home page and login page

--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -31,12 +31,10 @@
             <a class="app-notifications" href="notifications/index.html">
               <span class="icon icon-bell"></span>
             </a>
-          </li>
-          <li>
-            <button class="btn btn-default navbar-btn navbar-btn-avitar" data-toggle="popover">
-              <img class="img-circle" src="assets/img/avatar-dhg.png">
-            </button>
-          </li>
+        </li>
+        <li><a ui-sref="home.login">Sign In</a></li>
+        <li><a ui-sref="home.signup">Sign Up </a></li>
+
         </ul>
 
 
