--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -28,8 +28,12 @@
   </div>
 </div>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <strong class="megrim">Codelegy</strong> &copy; Copyright 2015
-  </footer>
-</div>
+
+    // <script>
+    //   // execute/clear BS loaders for docs
+    //   $(function(){
+    //     if (window.BS&&window.BS.loader&&window.BS.loader.length) {
+    //       while(BS.loader.length){(BS.loader.pop())()}
+    //     }
+    //   })
+    // </script>
