created registration form

--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -33,7 +33,7 @@
             </a>
         </li>
         <li><a ui-sref="home.login">Sign In</a></li>
-        <li><a ui-sref="home.signup">Sign Up </a></li>
+        <li><a ui-sref="home.form.profile">Sign Up </a></li>
 
         </ul>
 
