Update production mailer settings. --skip-ci

--- a/app/views/user_mailer/request_membership.text.erb
+++ b/app/views/user_mailer/request_membership.text.erb
@@ -2,6 +2,6 @@ Dear <%= @user.email %>
 
 You have a new member request for <%= @project.title %>!
 
-<%= link_to "Go to your codelegy dashboard", user_url(@user.id) %>
+<%= link_to "Go to your codelegy dashboard", domain_url %>
 
 To unsubscribe to email notifications, login to your codelegy account to change settings.
