--- a/app/views/user_mailer/test_production_mail.html.erb
+++ b/app/views/user_mailer/test_production_mail.html.erb
@@ -1,6 +1,6 @@
-<p>Dear <%= @user.email %>, </p>
+<p>Dear Guy, </p>
 
-<p>You have a new member request for <%= @project.title %>! </p>
+<p>Does this work? </p>
 <p>
 <%= link_to "Go to your codelegy dashboard", domain_url %> to see the details.
 </p>
