github omniauth  --skip-ci

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -29,7 +29,7 @@
 
         <button class="btn btn-default">Sign up</button>
 
-        <button class="btn btn-default">Sign in with <b>Github</b></button>
+        <a class="btn btn-default" href="/users/auth/github">Sign in with <b>Github</b></a>
       </div>
 
       <footer class="screen-login">
