--- a/public/templates/projects/projects.html
+++ b/public/templates/projects/projects.html
@@ -3,6 +3,8 @@
 <main>
 <br>
   <h2>Projects</h2>
+  <h5 ng-click="update()">update</h5>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa facilis, labore debitis nesciunt ipsam odio corporis architecto reiciendis voluptas ab quibusdam ratione rerum tempore voluptatibus libero cumque dignissimos vero hic!</p>
+  <p>{{projects}}</p>
 </main>
 </ui-view>
