--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -22,7 +22,7 @@
             <a href="profile/index.html">Showcase</a>
           </li>
           <li>
-            <a data-toggle="modal" href="#msgModal">Projects</a>
+            <a data-toggle="modal" ui-sref="projects">Projects</a>
           </li>
 
         </ul>
