fixed syntax error  --skip-ci

--- a/public/templates/projects/projects.html
+++ b/public/templates/projects/projects.html
@@ -1,5 +1,7 @@
 <ui-view>
-
+<div class="row">
+  <div class="col-md-1" ng-repeat="language in languages"></div>
+</div>
 <main>
 <br>
   <h2>Projects</h2>
