user signup form wired, working on profile info during registration  --skip-ci

--- a/public/templates/registration/form-lang.html
+++ b/public/templates/registration/form-lang.html
@@ -2,21 +2,47 @@
   <label>
     <input type="checkbox"  ng-model="formData.ruby">
     <span class="custom-control-indicator"></span>
-    Check this custom checkbox
+    Ruby
   </label>
 </div>
+
 <div class="checkbox custom-control custom-checkbox">
   <label>
     <input type="checkbox"  ng-model="formData.javascript" checked>
     <span class="custom-control-indicator"></span>
-    This custom checkbox is checked
+    JavaScript
   </label>
 </div>
+
 <div class="checkbox custom-control custom-checkbox">
   <label>
     <input type="checkbox" disabled>
     <span class="custom-control-indicator"></span>
-    This custom checkbox is disabled
+    HTML
+  </label>
+</div>
+
+<div class="checkbox custom-control custom-checkbox">
+  <label>
+    <input type="checkbox" disabled>
+    <span class="custom-control-indicator"></span>
+    CSS
+  </label>
+</div>
+
+<div class="checkbox custom-control custom-checkbox">
+  <label>
+    <input type="checkbox" disabled>
+    <span class="custom-control-indicator"></span>
+    Ruby on Rails
+  </label>
+</div>
+
+<div class="checkbox custom-control custom-checkbox">
+  <label>
+    <input type="checkbox" disabled>
+    <span class="custom-control-indicator"></span>
+    Angular JS
   </label>
 </div>
 
