--- a/public/templates/registration/form-availability.html
+++ b/public/templates/registration/form-availability.html
@@ -1,12 +1,10 @@
 <div class="text-center">
     <span class="glyphicon glyphicon-heart"></span>
     <h3></h3>
-    
-
     <div class="form-group row">
     <div class="col-xs-6 col-xs-offset-3">
         <br>
-        <a type="submit" class="btn btn-block btn-success">
+        <a type="submit" class="btn btn-block btn-success" ng-click='register()'>
         Submit<span class="glyphicon glyphicon-circle-arrow-right"></span>
         </a>
     </div>
