--- a/public/templates/registration/form-profile.html
+++ b/public/templates/registration/form-profile.html
@@ -10,12 +10,12 @@
 
 <div class="form-group">
     <label for="password">Password</label>
-    <input type="text" class="form-control" name="password" ng-model="credentials.password">
+    <input type="password" class="form-control" name="password" ng-model="credentials.password">
 </div>
 
 <div class="form-group">
     <label for="password_confirmation">Password Confirmation</label>
-    <input  type="text" class="form-control"
+    <input  type="password" class="form-control"
             name="email" ng-model="credentials.password_confirmation">
 </div>
 
