--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -2,7 +2,7 @@
 <hr><hr>
 <!-- Languages -->
 <div class="row">
-  <div class="col-sm-1 col-sm-offset-2">
+  <div class="col-sm-1">
 
   </div>
   <div class="col-sm-1" ng-repeat="language in languages">
@@ -35,6 +35,9 @@
         <strong>Project Owner:</strong> {{project.owner.email}} <br>
         <strong>Est. Difficulty:</strong>{{project.difficulty_name}} <br>
         <strong>Times:</strong> {{project.availability}} <br>
+        <strong>Languages:</strong>
+         <img ng-repeat="lang in project.languages" src="{{lang.url}}" alt="{{lang.name}}"
+         style="width:20px;margin:5px">
       </div>
     </div>
   </div>
