fixed display with project show route data  --skip-ci

--- a/public/templates/projects/participation-request.html
+++ b/public/templates/projects/participation-request.html
@@ -1,7 +1,7 @@
 <main>
   <br>
   <div class="container-content-middle">
-    <h3>Code with {{project.owner.username}}</h3>
+    <h3>Code with {{project.owner_username}}</h3>
     <h4>{{project.title}}</h4>
 
     <textarea placeholder="Why do you want to work on this project?"
