--- a/public/templates/registration/form.html
+++ b/public/templates/registration/form.html
@@ -16,10 +16,10 @@
         </div>
 
         <!-- use ng-submit to catch the form submission and use our Angular function -->
-        <form id="signup-form" ng-submit="processForm()">
+        <div id="signup-form">
             <!-- our nested state views will be injected here -->
             <div id="form-views" ui-view></div>
-        </form>
+        </div>
 
     </div>
 
