--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -75,3 +75,18 @@ pre                             { margin-bottom:20px; }
   margin-top: 100px;
   padding-top: 100px;
 }
+
+
+input.ng-dirty.ng-valid{
+  /* green */
+  border: 2px solid green;
+}
+
+input.ng-dirty.ng-invalid{
+  /* red */
+  border: 2px solid #F00;
+}
+/*
+input.ng-touched.ng-empty{
+  border: initial;
+}*/
