--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -34,11 +34,11 @@
             </a>
         </li>
 
-        <li><a ui-sref="home.login" ng-if='!authenticated.status'>Sign In</a></li>
+        <li><a ui-sref="home.signin" ng-if='!authenticated.status'>Sign In</a></li>
         <li><a ui-sref="home.form.signup" ng-if='!authenticated.status'>Sign Up</a></li>
 
         <li ng-if='authenticated.status'><a href='#'> Welcome {{currentUser.user.username}} </a></li>
-        <li><a ui-sref="home.login" ng-if='authenticated.status' ng-click='signOut()'>Sign Out</a></li>
+        <li><a ui-sref="home.signin" ng-if='authenticated.status' ng-click='signOut()'>Sign Out</a></li>
 
         </ul>
 
