--- a/public/templates/registration/form.html
+++ b/public/templates/registration/form.html
@@ -15,6 +15,15 @@
             </div>
         </div>
 
+        <div class='row'>
+          <br>
+            <div class='col-sm-4 col-sm-offset-4'>
+                <a class="btn btn-default btn-block" href="/users/auth/github">
+                    Sign up with <b>Github</b>
+                </a>
+            </div>
+        </div>
+
         <!-- use ng-submit to catch the form submission and use our Angular function -->
         <div id="signup-form">
             <!-- our nested state views will be injected here -->
