before pulling changes  --skip-ci

--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -29,7 +29,7 @@
 
         <ul class="nav navbar-nav navbar-right m-r-0 hidden-xs">
         <li >
-            <a class="app-notifications" href="notifications/index.html">
+            <a class="app-notifications" ui-sref="inbox">
               <span class="icon icon-bell"></span>
             </a>
         </li>
