work on model tests  --skip-ci

--- a/public/templates/registration/form-sign-up.html
+++ b/public/templates/registration/form-sign-up.html
@@ -1,3 +1,12 @@
+<div class='row'>
+  <br>
+    <div class='col-sm-4 col-sm-offset-4'>
+        <a class="btn btn-default btn-block" href="/users/auth/github">
+            Sign up with <b>Github</b>
+        </a>
+    </div>
+</div>
+
 <form class="form-group" name="signupForm" ng-submit="processForm(signupForm.$valid)">
 
     <!-- Username -->
