--- a/public/templates/registration/form.html
+++ b/public/templates/registration/form.html
@@ -9,20 +9,12 @@
             <!-- the links to our nested states using relative paths -->
             <!-- add the active class if the state matches our ui-sref -->
             <div id="status-buttons" class="text-center">
-                <a ui-sref-active="active" ui-sref=".profile"><span>1</span> Profile</a>
+                <a ui-sref-active="active" ui-sref=".signup"><span>1</span> Profile</a>
                 <a ui-sref-active="active" ui-sref=".languages"><span>2</span> Languages</a>
                 <a ui-sref-active="active" ui-sref=".availability"><span>3</span> Availability</a>
             </div>
         </div>
 
-        <div class='row'>
-          <br>
-            <div class='col-sm-4 col-sm-offset-4'>
-                <a class="btn btn-default btn-block" href="/users/auth/github">
-                    Sign up with <b>Github</b>
-                </a>
-            </div>
-        </div>
 
         <!-- use ng-submit to catch the form submission and use our Angular function -->
         <div id="signup-form">
