--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -2,7 +2,7 @@
 <hr><hr>
 <!-- Languages -->
 <div class="row">
-  <div class="col-sm-1 col-sm-offset-2">
+  <div class="col-sm-1">
 
   </div>
   <div class="col-sm-1" ng-repeat="language in languages">
@@ -12,63 +12,65 @@
 </div>
 <br>
 <!-- End Languages -->
-<!-- <main>
+
+<div class="container">
+
 <br>
 
-
+<div class="pull-right">
+{{grid}}
+  <div class="btn-group">
+    <a class="btn"
+    ng-class="{'btn-default': grid, 'bg-gray-dark': !grid}"
+    ng-click="toggleGrid()"><i class="fa fa-list"></i>
+    </a>
+    <a class="btn"
+    ng-class="{'btn-default': !grid, 'bg-gray-dark': grid}"
+    ng-click="toggleGrid()">
+    <i class="fa fa-th"></i></a>
+  </div>
+</div>
 <div class="row">
-  <div class="col-md-10">
-    <h2>Projects</h2>
-    <hr>
-    <div class="col-md-6" ng-repeat="project in projects">
-      <h4>{{project.title}}</h4>
-      Project Owner: <h5>{{project.owner.email}}</h5>
-      Est. Difficulty:<h5>{{project.difficulty_name}}</h5>
+  <div class="col-sm-3"><h2>Projects</h2></div>
+  <div class="col-sm-4 col-sm-offset-3">
+  <button ui-sref="projects.new"
+  class="btn btn-primary pull-right">New Project</button>
+
+  </div>
+</div>
+<div ng-class="{row: ($index%3 == 2)}" ng-repeat="project in projects | orderBy:'-created_at': false">
+  <div ng-class="{'col-sm-4': grid, 'col-sm-12': !grid}"
+   >
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h4>{{project.title}}</h4>
+        <hr>
+        <p class="small text-muted">
+          <div ng-hide="moreThan24HrsAgo(project.created_at)">
+            <i class="fa fa-clock-o fa-fw"></i>
+            <time am-time-ago="project.created_at"></time>
+          </div>
+          <div ng-show="moreThan24HrsAgo(project.created_at)">
+            <i class="fa fa-calendar fa-fw"></i>
+            <time title="{{ project.created_at | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">{{ project.created_at | amCalendar }}</time>
+          </div>
+        </p>
+        <strong>Project Owner:</strong>
+        <a ui-sref="profiles.show({id: project.owner.id})">{{project.owner.username}}</a><br>
+        <strong>Est. Difficulty:</strong>{{project.difficulty_name}} <br>
+        <strong>Times:</strong> {{project.availability}} <br>
+        <strong>Languages:</strong>
+         <img ng-repeat="lang in project.languages" src="{{lang.url}}" alt="{{lang.name}}"
+         style="width:20px;margin:5px"> <br>
+         <a ui-sref="project.join({id: project.id})">Code Together</a>
+      </div>
     </div>
   </div>
-  <div class="col-md-1 col-md-offset-1">
-    <button ui-sref="projects.new" class="btn btn-primary pull-right">New Project</button>
-  </div>
-</main> -->
+
+
 </div>
-         <div class="container-fluid">
-          
-            <div class="page-header">
-              <h1 class="h3 pull-left margin-none">Projects</h1>
-              <div class="pull-right">
-                <div class="btn-group">
-                  <a class="btn bg-gray-dark" ui-sref="projects"><i class="fa fa-list"></i></a>
-                  <a class="btn btn-default" ui-sref="projects.grid"><i class="fa fa-th"></i></a>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-          <div  ng-repeat="project in projects">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="media media-clearfix-xs-min">
-                  <div class="media-left">
-                    <img src="https://s3.amazonaws.com/openshift-hub/production/quickstarts/76/rails.png?1425245483" alt="">
-                  </div>
 
-                  <div class="media-body">
-                    <h3 class="media-heading h4">{{project.title}}</h3>
+</div>
 
-                    <p class="small text-muted">
-                      <i class="fa fa-clock-o fa-fw"></i> <time am-time-ago="project.created_at"></time> 
-                      <i class="fa fa-user fa-fw"></i> {{project.owner.username}}
-                      <i class="fa fa-calendar fa-fw"></i> <time title="{{ project.created_at | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">{{ project.created_at | amCalendar }}</time>
-                    </p>
-
-                    <p>{{project.description}}{{project}}</p>
-                    <!-- <span class="label bg-gray-dark">New</span> -->
-                    <span class="label label-primary">WordPress</span>
-                    <span class="label label-warning">{{project.difficulty_name}}</span>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-          </div>
+</div>
 </ui-view>
