--- a/public/templates/registration/form-availability.html
+++ b/public/templates/registration/form-availability.html
@@ -3,6 +3,12 @@
     <h3></h3>
     <div class="form-group row">
     <div class="col-xs-6 col-xs-offset-3">
+        <label for="availability">Availability</label>
+        <input type="text"
+                class="form-control"
+                name="availability" 
+                placeholder="Mon-Sun, 8-10am"
+                ng-model="profileInput.availability">
         <br>
         <a type="submit" class="btn btn-block btn-success" ng-click='register()'>
         Submit<span class="glyphicon glyphicon-circle-arrow-right"></span>
