--- a/public/templates/mailbox/inbox.html
+++ b/public/templates/mailbox/inbox.html
@@ -1,23 +1,24 @@
 <main>
   <div class="row">
 
-    <div class="col-md-10">
-      <ui-view>
+    <div class="col-md-12">
+
         <h2>Inbox</h2>
         <hr>
-        <div class="col-md-6" ng-repeat="email in inbox">
+        <div ng-repeat="email in inbox">
 
-          <div ng-click=showEmail($index)>
+          <div ui-sref = "email({'id': $index})">
             <h5>From: {{email.sender_username}} at {{email.date | date}}</h5>
             <h4>{{email.subject}}</h4>
             <div ng-show="emailDetails[$index]">
               <h3>{{email.body}}</h3>
+              <a ui-sref = "email({'id': $index})">Details</a>
 
             </div>
           </div>
           <hr>
         </div>
-      <ui-view>
+
     </div>
 
   </div>
