--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -7,7 +7,7 @@
   </div>
   <div class="col-sm-1" ng-repeat="language in languages">
       <button class="btn btn-default btn-block" ng-click='addLang(language)'
-              ng-class='{"active": langFilter[language]}'>{{language}}</button>
+              ng-class='{"active": langFilter[language]}'>{{language}}</button><br>{{langFilter[language]}}
   </div>
 </div>
 <br>
@@ -18,7 +18,6 @@
 <br>
 
 <div class="pull-right">
-{{grid}}
   <div class="btn-group">
     <a class="btn"
     ng-class="{'btn-default': grid, 'bg-gray-dark': !grid}"
@@ -38,7 +37,22 @@
 
   </div>
 </div>
-<div ng-class="{row: ($index%3 == 2)}" ng-repeat="project in projects | orderBy:'-created_at': false">
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    Times: <input type="text" ng-model="timesFilter">
+    Difficulty: <select ng-model="difficultyFilter">
+      <option value="None">None</option>
+      <option value="Beginner">Beginner</option>
+      <option value="Intermediate">Intermediate</option>
+      <option value="Expert">Expert</option>
+      <option value="Master">Master</option>
+    </select> <br>
+    {{timesFilter}}||{{difficultyFilter}}
+  </div>
+</div>
+<br>
+<div ng-class="{row: ($index%3 == 2)}" ng-repeat="project in projects | filter: projectFilter | orderBy:'-created_at': false">
   <div ng-class="{'col-sm-4': grid, 'col-sm-12': !grid}"
    >
     <div class="panel panel-default">
