fixed links on navbar  --skip-ci

--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -16,13 +16,13 @@
 
         <ul class="nav navbar-nav hidden-xs">
           <li class="active megrim">
-            <a href="index.html">Codelegy</a>
+            <a ui-sref="home">Codelegy</a>
           </li>
           <li>
-            <a href="profile/index.html">Showcase</a>
+            <a href="#">Showcase</a>
           </li>
           <li>
-            <a data-toggle="modal" ui-sref="projects">Projects</a>
+            <a ui-sref="projects">Projects</a>
           </li>
 
         </ul>
