--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -42,7 +42,7 @@
   <div class="col-md-6 col-md-offset-3">
     Times: <input type="text" ng-model="filter.availability">
     Difficulty: <select ng-model="filter.difficulty_name">
-      <option value="None">None</option>
+      <option value="">No Filter</option>
       <option value="Beginner">Beginner</option>
       <option value="Intermediate">Intermediate</option>
       <option value="Expert">Expert</option>
