--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -38,7 +38,7 @@
         <li><a ui-sref="home.form.signup" ng-if='!authenticated.status'>Sign Up</a></li>
 
         <li ng-if='authenticated.status'>
-          <a ui-sref='profiles.dashboard'>
+          <a ui-sref='dashboard'>
             Welcome {{currentUser.user.username}}
           </a>
         </li>
