dashboard routes and views configured  --skip-ci

--- a/public/templates/registration/sign-in.html
+++ b/public/templates/registration/sign-in.html
@@ -24,7 +24,7 @@
       </p>
 
       </div> <!-- Email End -->
-      
+
 
       <!-- Password -->
       <div class="form-group m-b-md" ng-class="{ 'has-error' : signinForm.password.$invalid
@@ -54,7 +54,10 @@
 
         <br>
 
-        <a class="btn btn-default" href="/users/auth/github" id='github-button-sign-in'>Sign in with <b>Github</b>
+        <a class="btn btn-default"
+            href="/users/auth/github"
+            id='github-button-sign-in'>
+          Sign in with <b>Github</b>
         </a>
 
       </div>
