--- a/public/templates/dashboard/layout.html
+++ b/public/templates/dashboard/layout.html
@@ -1,18 +1,17 @@
 <!-- <div class="growl" id="app-growl"></div> -->
 
-
-<h1>dashboard layout</h1>
+<h1>dashboard</h1>
 
 <div class="container p-t-md">
   <div class="row">
 
-    <div class="col-md-3" ui-view="dashboard.profile"></div>
+    <div class="col-sm-3" ui-view="profile"> Profile View </div>
 
-    <div class="col-md-6" ui-view="projects"></div>
+    <div class="col-sm-6" ui-view="projects"> Projects View </div>
 
-    <div class="col-md-3">
-      <div class="row" ui-view="sales"></div>
-      <div class="row" ui-view="suggestions"></div>
+    <div class="col-sm-3">
+      <div class="row" ui-view="sales"> Sales View </div>
+      <div class="row" ui-view="suggestions"> Suggestions View </div>
     </div>
 
   </div>
