--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -6,20 +6,20 @@
 
   </div>
   <div class="col-sm-1" ng-repeat="language in languages">
-      <button class="btn btn-default btn-block" ng-click='addLang(language)'
-              ng-class='{"active": langFilter[language]}'>{{language}}</button>
+    <button class="btn btn-default btn-block" ng-click='addLang(language)'
+    ng-class='{"active": langFilter[language]}'>{{language}}</button>
   </div>
 </div>
 <br>
 <!-- End Languages -->
 
 <div class="container">
-<br>
-<div class="pull-right">
-  <div class="btn-group">
-    <a class="btn"
-    ng-class="{'btn-default': grid, 'bg-gray-dark': !grid}"
-    ng-click="toggleGrid()"><i class="fa fa-list"></i>
+  <br>
+  <div class="pull-right">
+    <div class="btn-group">
+      <a class="btn"
+      ng-class="{'btn-default': grid, 'bg-gray-dark': !grid}"
+      ng-click="toggleGrid()"><i class="fa fa-list"></i>
     </a>
     <a class="btn"
     ng-class="{'btn-default': !grid, 'bg-gray-dark': grid}"
@@ -30,8 +30,8 @@
 <div class="row">
   <div class="col-sm-3"><h2>Projects</h2></div>
   <div class="col-sm-4 col-sm-offset-3">
-  <button ui-sref="projects.new"
-  class="btn btn-primary pull-right">New Project</button>
+    <button ui-sref="projects.new"
+    class="btn btn-primary pull-right">New Project</button>
 
   </div>
 </div>
@@ -40,60 +40,88 @@
   <div class="col-md-6 col-md-offset-3">
     Times: <input type="text" ng-model="filter.availability">
     Difficulty: <select ng-model="filter.difficulty_name">
-      <option value="">No Filter</option>
-      <option value="Beginner">Beginner</option>
-      <option value="Intermediate">Intermediate</option>
-      <option value="Expert">Expert</option>
-      <option value="Master">Master</option>
-    </select> <br>
-  </div>
+    <option value="">No Filter</option>
+    <option value="Beginner">Beginner</option>
+    <option value="Intermediate">Intermediate</option>
+    <option value="Expert">Expert</option>
+    <option value="Master">Master</option>
+  </select> <br>
+</div>
 </div>
 <br>
 <div class="row">
   <div class="col-sm-9">
    <div ng-class="{row: ($index%3 == 2)}" ng-repeat="project in projects | filter: projectFilter | filter: filter | orderBy:'-created_at': false">
     <div ng-class="{'col-sm-4': grid, 'col-sm-`1': !grid}"
-     >
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <h4>{{project.title}}</h4>
-          <hr>
-          <p class="small text-muted">
-            <div ng-hide="moreThan24HrsAgo(project.created_at)">
-              <i class="fa fa-clock-o fa-fw"></i>
-              <time am-time-ago="project.created_at"></time>
-            </div>
-            <div ng-show="moreThan24HrsAgo(project.created_at)">
-              <i class="fa fa-calendar fa-fw"></i>
-              <time title="{{ project.created_at | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">{{ project.created_at | amCalendar }}</time>
-            </div>
-          </p>
-          <strong>Project Owner:</strong>
-          <a ui-sref="profiles.show({id: project.owner.id})">{{project.owner.username}}</a><br>
-          <strong>Est. Difficulty:</strong>{{project.difficulty_name}} <br>
-          <strong>Times:</strong> {{project.availability}} <br>
-          <strong>Languages:</strong>
-           <img ng-repeat="lang in project.languages" src="{{lang.url}}" alt="{{lang.name}}"
-           style="width:20px;margin:5px"> <br>
-           <a ui-sref="projects.join({id: project.id})">Code Together</a>
+    >
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h4>{{project.title}}</h4>
+        <hr>
+        <p class="small text-muted">
+          <div ng-hide="moreThan24HrsAgo(project.created_at)">
+            <i class="fa fa-clock-o fa-fw"></i>
+            <time am-time-ago="project.created_at"></time>
+          </div>
+          <div ng-show="moreThan24HrsAgo(project.created_at)">
+            <i class="fa fa-calendar fa-fw"></i>
+            <time title="{{ project.created_at | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}">{{ project.created_at | amCalendar }}</time>
+          </div>
+        </p>
+        <strong>Project Owner:</strong>
+        <a ui-sref="profiles.show({id: project.owner.id})">{{project.owner.username}}</a><br>
+        <strong>Est. Difficulty:</strong>{{project.difficulty_name}} <br>
+        <strong>Times:</strong> {{project.availability}} <br>
+        <strong>Languages:</strong>
+        <img ng-repeat="lang in project.languages" src="{{lang.url}}" alt="{{lang.name}}"
+        style="width:20px;margin:5px"> <br>
+        <a ui-sref="projects.join({id: project.id})">Code Together</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<div class="col-sm-3">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <h4>Suggested Projects:</h4>
+      <hr>
+      <div>
+        <h4>All:</h4>
+        <div>
+          <a href="https://projecteuler.net/" target="_blank" style="target-new: tab;">
+            &emsp;Project Euler
+          </a>
+        </div>
+        <div>
+          <a href="http://www.theodinproject.com/courses?ref=home" target="_blank" style="target-new: tab;">
+            &emsp;Odin Project
+          </a>
+        </div>
+        <div>
+          <a href="https://www.codecademy.com/" target="_blank" style="target-new: tab;">
+            &emsp;Code Academy
+          </a>
+        </div>
+      </div>
+
+
+      <div ng-repeat="(key, value) in langSuggestions" ng-show="langFilter[key]">
+        <h4>{{key}}:</h4>
+        <div ng-repeat="suggestion in value">
+          <a href="{{suggestion.url}}" target="_blank" style="target-new: tab;">
+            &emsp;{{suggestion.title}}
+          </a>
         </div>
       </div>
     </div>
+
+
+
+
   </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <h4>Suggested Projects:</h4>
-        <hr>
-
-
-
-
-
-      </div>
-    </div>
-  </div>
+</div>
+</div>
 </div>
 
 
